--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Some CSS Stuff</h1>
-    <button class="toggle">TOGGLE BUTTON</button>
-    <!-- <button class="button-scnd">I am kind of unique, though</button> -->
-    <script src="main.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
